--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate": "git status",
+    "test-migrate-undo": "NODE_ENV=test sequelize db:migrate:undo:all",
     "seed-db": "sequelize db:seed:all",
     "start": "nodemon index.js",
     "pretest": "NODE_ENV=test sequelize db:migrate",
